--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3",
     "vue2-dropzone": "^2.0.0"
+  },
+  "dependencies": {
+    "three": "^0.84.0",
+    "three-orbit-controls": "^82.1.0",
+    "vuex": "^2.1.2"
   }
 }
